--- a/css/app.css
+++ b/css/app.css
@@ -17,8 +17,9 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/darkness.png'); /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
+    color: #F2EB61;
 }
 
 .container {
@@ -31,6 +32,7 @@ body {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+    color: #F2EB61
 }
 
 /*
@@ -40,10 +42,10 @@ h1 {
 .deck {
     width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    background: linear-gradient(150deg, #F0F49E 0%, #09370F 100%);
     padding: 32px;
     border-radius: 10px;
-    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+    box-shadow: 3px 5px 7px 0 #F0F49E;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -56,7 +58,7 @@ h1 {
     width: 125px;
     background: #2e3d49;
     font-size: 0;
-    color: #ffffff;
+    color: #F0F49E;
     border-radius: 8px;
     cursor: pointer;
     display: flex;
@@ -67,7 +69,7 @@ h1 {
 
 .deck .card.open {
     transform: rotateY(0);
-    background: #02b3e4;
+    background: #17202A;
     cursor: default;
 }
 
@@ -77,7 +79,7 @@ h1 {
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: #ffffff url('../img/darkness.png');
     font-size: 33px;
 }
 
@@ -91,12 +93,16 @@ h1 {
     margin-bottom: 10px;
 }
 
+.clock {
+  color: #F2EB61;
+}
+
 .score-panel .stars {
     margin: 0;
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
-    color: orange;
+    color: #F2EB61;
 }
 
 .score-panel .stars li {
@@ -104,29 +110,40 @@ h1 {
     display: inline-block;
 }
 
+.moves {
+  color: #F2EB61;
+}
+
 .score-panel .restart {
     float: right;
     cursor: pointer;
 }
 
+/*
+ * Styles for the modal
+ */
+
 .modal {
   margin: auto;
   width: 40%;
-  background: #ffffff;
+  background: #17202A;
   transform: translate(-50%, -50%);
   position: absolute;
   top: 65%;
   left: 50%;
   right: 50%;
   padding: 40px;
+  background: #ffffff url('../img/darkness.png');
 }
 
 .modal-heading {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 0 1.5rem;
   border-bottom: 1px solid gray;
+}
+
+#modal-title {
+  text-align: center !important;
+  font-weight: bold;
 }
 
 .stats {
@@ -135,6 +152,12 @@ h1 {
   align-items: center;
   padding: 1rem;
   border-bottom: 1px solid gray;
+}
+
+#starRating {
+list-style: none;
+display: inline-flex;
+justify-content: space-between;
 }
 
 .button {
@@ -146,6 +169,8 @@ h1 {
 .replay {
   width: 60px;
   height: 30px;
+  background-color: #F2EB61;
+  color: #09370F;
 }
 
 .hide {
